@@ -79,7 +79,7 @@ else {
 			$versionCode=$_POST["versionCode"] ;
 
 			//Validate Inputs
-			if ($versionDB=="" OR $versionCode=="" OR $versionDB>=$versionCode) {
+			if ($versionDB=="" OR $versionCode=="" OR (float)$versionDB>=(float)$versionCode) {
 				//Fail 3
 				$URL.="&updateReturn=fail3" ;
 				header("Location: {$URL}");
@@ -89,7 +89,7 @@ else {
 				
 				$partialFail=FALSE;
 				foreach ($sql AS $version) {
-					if ($version[0]>$versionDB AND $version[0]<=$versionCode) {
+					if ((float)$version[0]>(float)$versionDB AND (float)$version[0]<=(float)$versionCode) {
 						$sqlTokens=explode(";end", $version[1]) ;
 						foreach ($sqlTokens AS $sqlToken) {
 							if (trim($sqlToken)!="") {
